<resources>
    <string name="app_name">AppDemo</string>
    <!--login page-->
    <string name="account">请填写用户名</string>
    <string name="password">请填写密码</string>
    <string name="login">登录</string>
    <!--chat page-->
    <string name="sendMsg">发送</string>
    <string name="go_to_popWindow">go To PopWindow</string>
    <string name="startintentservice">startIntentService</string>
    <string name="sendnotificaiton">sendNotificaiton</string>
    <string name="tologin">toLogin</string>
    <string name="drop_studentinfo">drop StudentInfo</string>
    <string name="search_studentinfo">search StudentInfo</string>
    <string name="save_studentinfo">save StudentInfo</string>
    <string name="get_studentinfo">get StudentInfo</string>
    <string name="get_appinfo">get appInfo</string>
    <string name="go_to_qrCode">goToQRCode</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_scan_code">扫码页面</string>
    <string name="title_activity_float_action">FloatActionActivity</string>
    <string name="RememberPassword">记住密码</string>
    <string name="password_">密码：</string>
    <string name="username_">用户名：</string>
    <string name="log_in">LOG IN</string>
    <string name="go_to_apiTest">GoToApi</string>
    <string name="param1">param1</string>
    <string name="param2">param2</string>
    <string name="network_test">post</string>
    <string name="param3">param3</string>
    <string name="go_to_idCard">goToIdCard</string>
    <string name="show_info">show</string>
    <string name="read_idInfo">read</string>
</resources>
