<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    android:paddingRight="50sp"
    android:paddingLeft="50sp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/username_"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <EditText
        android:id="@+id/et_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
            android:layout_weight="3"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:text="@string/password_"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <EditText
            android:id="@+id/et_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:inputType="textPassword"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="end|center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp">
    <CheckBox
        android:id="@+id/cbox_isRememberPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RememberPassword"/>
    </LinearLayout>
    <Button
        android:id="@+id/btn_logIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="20sp"
        android:text="@string/log_in"/>




</LinearLayout>
